Generator.Tests.Abstraction/TestCases/InvalidTypeConversion/Composition2/InvalidTypeConversionToEntity2.cs
using System;

namespace Paukertj.Autoconverter.Generator.Tests.Abstraction.TestCases.InvalidTypeConversion.Composition1
{
    public class InvalidTypeConversionToEntity2
    {
        public Guid Property { get; set; }
    }
}
